index.css
html {
    scroll-behavior: smooth;
  }
  * {
    box-sizing: border-box;
  }

body {
    background-image: linear-gradient(to bottom right,rgba(169, 167, 246, 1), rgba(40, 43, 119, 1));
    font-family: 'Archivo';
    margin: 0;
    animation: fadeInAnimation ease 3s;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
}

@keyframes fadeInAnimation {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
     }
}

.nav {
    overflow: hidden;  
  }

.links {
    text-align: center;
    margin-bottom: 20px;
    margin-top: 40px;

}
  
  /* Style the links inside the navigation bar */
.nav a {
    color: #ffffff;
    padding: 14px 20px 20px 20px;
    text-decoration: none;
    font-size: 17px;

}

.nav a.active {
    background-color: rgba(255, 255, 255, 0.2);
    color: white;
    border-radius: 40px;
  }
  
/* Change the color of links on hover */
.nav a:hover {
background-color: rgba(255, 255, 255, 0.2);
border-radius: 40px;

}

.title {
    padding: 110px;
    text-align: center;
    color: white;
}

.title h1 {
    font-size: 70px;
    font-weight:900;
    margin-bottom: 0;
    
 }
  
.title p{
    font-size: 20px;
    padding-bottom: 30px;
}

.button {
    background-color: rgb(11, 33, 88);
    border: none;
    color: white;
    padding: 15px 32px;
    font-weight: bolder;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    border-radius: 30px;
    
}

.button:hover {
    background-color: rgba(255, 255, 255, 0.2);
}

img {
    border-radius: 50%;
    border: 2px solid white;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,3);
    position: sticky;
}


.about {
    padding: 40px, 40px;
    text-align: center;
    color: white;
}

.about h1 {
    font-size: 50px;
    margin-bottom: 0;
 }
  
hr {
    width: 10%;
    height: 2px;
    margin-bottom: 80px;
}

.whole {  
    display: flex;
    padding: 30px 80px 80px;

  }
  
  /* column */
  .column {
    padding: 40px;
    text-align: left;
    color: black;
    line-height: 30px;
    background-color: rgb(255,255,255,0.8);
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    margin: 10px;
    width: 50%;
    border-radius: 30px;
  }

  .column h1 {
    color: black;
  }

  .column:hover {
    box-shadow: 0 3px 30px rgba(255, 255, 255, 0.2);  }

.skills {
    display: inline-block;
}
.skill{
    display: inline-block;
    padding: 20px 20px 20px 20px;
    vertical-align: middle;
    background-color: rgba(169, 167, 246, 1);
    margin-right: 20px;
    margin-bottom: 20px;
    border-radius: 10px;
    color: black;
    text-align: center;
}

.contact{
    text-align: center;
    color: white;
}
.contact h1{
    font-size: 45px;
    font-weight: 900;
}
.contactBox{
    border: 4.5px solid white;
    width: 50%;
    margin: auto;
    margin-bottom: 20px;
    text-align: center;
    border-radius: 40px;
    color: white;
}
.contactButton{
    margin-bottom: 20px;
    background-color: rgb(11, 33, 88);
    border: none;
    color: white;
    padding: 15px 32px;
    font-weight: bolder;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    border-radius: 30px;
    
}

.contactLinks a{
    color: #ffffff;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
}

.contactLinks a:hover{
    background-color: rgba(255, 255, 255, 0.2);
    border-radius: 40px;
}
.contactButton:hover {
    background-color: rgba(255, 255, 255, 0.2);
    border-radius: 40px;

}
.footer {
    margin-top: 30px;
    text-align: center;
    padding: 3px;
    background-color: black;
    color: white;
}   

@media screen and (max-width: 800px) {
    .about, .contact, .footer, .contactLinks, .whole, .column, .image {
      flex-direction: column;
      width: 100%;
    }
    .column {
        font-size: calc(10px + 0.390625vw);
    }
    img {
        width: 60%;
        height: 60%;
    }
    .title h1, .about h1 {
        font-size: calc(40px + 0.390625vw);
    }
    .title p {
        font-size: calc(20px + 0.390625vw);
    }
    .whole {
        padding: 15px 40px 40px 15px;
    }
   
   
  }

